--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
+    <groupId>awslamda</groupId>
     <artifactId>lambda-function</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -9,18 +9,15 @@
     <name>Lambda Function</name>
     <description>A serverless function for user verification</description>
 
-    <properties>
-        <java.version>21</java.version>
-    </properties>
-
+   <properties>
+  <maven.compiler.release>21</maven.compiler.release>
+ </properties>
     <dependencies>
-
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-rds</artifactId>
             <version>1.12.777</version>
         </dependency>
-
 
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -53,7 +50,7 @@
         <dependency>
             <groupId>com.mailgun</groupId>
             <artifactId>mailgun-java</artifactId>
-            <version>1.0.1</version>
+            <version>1.1.3</version>
         </dependency>
 
         <!-- JDBC for MySQL -->
@@ -69,8 +66,6 @@
             <artifactId>cloudevents-api</artifactId>
             <version>2.4.0</version>
         </dependency>
-
-    
     </dependencies>
 
     <build>
@@ -86,23 +81,22 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Shade Plugin for creating a fat JAR -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-shade-plugin</artifactId>
+  <version>3.3.0</version>
+  <executions>
+    <execution>
+      <phase>package</phase>
+      <goals>
+        <goal>shade</goal>
+      </goals>
+     
+    </execution>
+  </executions>
+</plugin>
+
+          
         </plugins>
     </build>
 </project>
